@@ -22,37 +22,64 @@ namespace Qyoto {
 									string childName, AddToListFn addFn);
 		
 		[DllImport("libqyotoshared", CharSet=CharSet.Ansi)]
-		private static extern bool ConnectDelegate(IntPtr obj, string signal, Delegate d);
+		private static extern bool ConnectDelegate(IntPtr obj, string signal, Delegate d, IntPtr handle);
+		
+		[DllImport("libqyotoshared", CharSet=CharSet.Ansi)]
+		private static extern bool DisconnectDelegate(IntPtr obj, string signal, Delegate d);
 		
 		public static bool Connect(QObject obj, string signal, NoArgDelegate d) {
 			// allocate a gchandle so the delegate won't be collected
-			GCHandle.Alloc(d);
-			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+			IntPtr handle = (IntPtr) GCHandle.Alloc(d);
+			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d, handle);
 		}
 		
 		public static bool Connect<T>(QObject obj, string signal, OneArgDelegate<T> d) {
-			GCHandle.Alloc(d);
-			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+			IntPtr handle = (IntPtr) GCHandle.Alloc(d);
+			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d, handle);
 		}
 		
 		public static bool Connect<T1, T2>(QObject obj, string signal, TwoArgDelegate<T1, T2> d) {
-			GCHandle.Alloc(d);
-			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+			IntPtr handle = (IntPtr) GCHandle.Alloc(d);
+			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d, handle);
 		}
 
 		public static bool Connect<T1, T2, T3>(QObject obj, string signal, ThreeArgDelegate<T1, T2, T3> d) {
-			GCHandle.Alloc(d);
-			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+			IntPtr handle = (IntPtr) GCHandle.Alloc(d);
+			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d, handle);
 		}
 
 		public static bool Connect<T1, T2, T3, T4>(QObject obj, string signal, FourArgDelegate<T1, T2, T3, T4> d) {
-			GCHandle.Alloc(d);
-			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+			IntPtr handle = (IntPtr) GCHandle.Alloc(d);
+			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d, handle);
 		}
 
 		public static bool Connect<T1, T2, T3, T4, T5>(QObject obj, string signal, FiveArgDelegate<T1, T2, T3, T4, T5> d) {
-			GCHandle.Alloc(d);
-			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+			IntPtr handle = (IntPtr) GCHandle.Alloc(d);
+			return ConnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d, handle);
+		}
+
+		public static bool Disconnect(QObject obj, string signal, NoArgDelegate d) {
+			return DisconnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+		}
+
+		public static bool Disconnect<T>(QObject obj, string signal, OneArgDelegate<T> d) {
+			return DisconnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+		}
+
+		public static bool Disconnect<T1, T2>(QObject obj, string signal, TwoArgDelegate<T1, T2> d) {
+			return DisconnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+		}
+
+		public static bool Disconnect<T1, T2, T3>(QObject obj, string signal, ThreeArgDelegate<T1, T2, T3> d) {
+			return DisconnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+		}
+
+		public static bool Disconnect<T1, T2, T3, T4>(QObject obj, string signal, FourArgDelegate<T1, T2, T3, T4> d) {
+			return DisconnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
+		}
+
+		public static bool Disconnect<T1, T2, T3, T4, T5>(QObject obj, string signal, FiveArgDelegate<T1, T2, T3, T4, T4> d) {
+			return DisconnectDelegate((IntPtr) GCHandle.Alloc(obj), signal, d);
 		}
 
 		public T FindChild<T>(string name) {
